PENDING
=======

* clarified licensing info
* renamed `get_token_secret` to `get_derived_secret` to clarify its
  purpose; the previous name remains but is deprecated.


0.2.0 - 2012-11-27
==================

* support for python3 via source-level compatibility


0.1.0 - 2012-03-14
==================

 * Initial release.