@@ -39,14 +39,14 @@ def strings_differ(string1, string2):
     return invalid_bits != 0
 
 
-def HKDF_extract(salt, IKM, hashmod=hashlib.sha1):
+def HKDF_extract(salt, IKM, hashmod=hashlib.sha256):
     """HKDF-Extract; see RFC-5869 for the details."""
     if salt is None:
         salt = b"\x00" * hashmod().digest_size
     return hmac.new(salt, IKM, hashmod).digest()
 
 
-def HKDF_expand(PRK, info, L, hashmod=hashlib.sha1):
+def HKDF_expand(PRK, info, L, hashmod=hashlib.sha256):
     """HKDF-Expand; see RFC-5869 for the details."""
     digest_size = hashmod().digest_size
     N = int(math.ceil(L * 1.0 / digest_size))
@@ -60,7 +60,7 @@ def HKDF_expand(PRK, info, L, hashmod=hashlib.sha1):
     return b"".join(output)[:L]
 
 
-def HKDF(secret, salt, info, size, hashmod=hashlib.sha1):
+def HKDF(secret, salt, info, size, hashmod=hashlib.sha256):
     """HKDF-extract-and-expand as a single function."""
     PRK = HKDF_extract(salt, secret, hashmod)
     return HKDF_expand(PRK, info, size, hashmod)
